--- a/ppt/img/mycss.css
+++ b/ppt/img/mycss.css
@@ -32,6 +32,8 @@ h3,hr{
     text-indent: 1em;
 }
 
+
+
 #ad1,#ad2{
     
 }
@@ -42,32 +44,64 @@ h3,hr{
 #logo{
 
 }
-#nav{
-
+#nav *{
+    /* box-shadow: 0px 2px 4px #ccc; */
+    background-color: white;
+    color: green;
 }
+#nav_logo{
+    position: absolute;
+    top: 0px;
+    height: 60px;
+    width: 230px;
+}
+/*  */
+#nav_qr:hover img{
+    display: block;
+}
+#nav_qr_img{
+    display: none;
+    position: absolute;
+    z-index: 20;
+    top:60px;
+    height: 128px;
+    width: 128px;
+}
+
 #ad{
-    position: relative;
+     position: relative; 
     
 }
-#ad1{
-    position: absolute;
-
+#ad1 img{
+    /* position: absolute; */
+    width: 100%;
 }
 #ad2{
     /* float: right; */
-    top: 42px;
-    right: 20px;
+     top: 0px; 
+    right: 15px;
     position: absolute;
     z-index: 12;
+}
+#ad2 button{
+    border: 0 solid white;
+    border-radius: 0;
 }
 #ad2 li{
     background-color: lightblue;
 }
 #news{
-    margin-top: 380px;
+     margin-top: 20px; 
 }
 #news1{
-
+    margin-bottom: 20px;
+}    
+#news1_1{
+    left: 80%;
+    bottom: 10px;
+}
+#news1_1>li{
+    border-radius: 0;
 }
 #news1 img{
     height: 220.8px;
@@ -135,4 +169,10 @@ h3,hr{
     margin-top: 20px;
 }
 
+
+@media screen and (max-width:768px){
+    #nav_r{
+        display: none;
+    }
+}
 /*  end.  */
