--- a/ppt/img/mycss.css
+++ b/ppt/img/mycss.css
@@ -83,7 +83,7 @@ h3,hr{
     position: absolute;
     z-index: 12;
 }
-#ad2 button{
+#ad2 a{
     border: 0 solid white;
     border-radius: 0;
 }
@@ -103,13 +103,16 @@ h3,hr{
 #news1_1>li{
     border-radius: 0;
 }
+#news1_2 a{
+    color: white;
+    font-size: 1.5em;
+}
 #news1 img{
-    height: 220.8px;
-    /* width: 470px; */
+    height: 323px;
     width: 100%;
 }
-#news2{
-
+#news2 td{
+    border-top: 0 solid white;
 }
 #lk{
 
@@ -170,9 +173,14 @@ h3,hr{
 }
 
 
-@media screen and (max-width:768px){
+@media screen and (max-width:760px){
     #nav_r{
         display: none;
     }
+    #news1 img{
+        height: 100%;
+        width: 100%;
+    }
+
 }
 /*  end.  */
